<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalkActivity">

    <TextView
        android:id="@+id/routeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="32dp"
        android:text="@string/new_route"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/Time_Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Time_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginEnd="175dp"
        android:text="@string/timer_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routeName" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="16dp"
        android:text="@string/timer"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/step_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Time_Title" />

    <TextView
        android:id="@+id/step_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="147dp"
        android:text="@string/step_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/step_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <TextView
        android:id="@+id/step_count"
        android:layout_width="15dp"
        android:layout_height="36dp"
        android:layout_marginStart="198dp"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="16dp"
        android:text="@string/step_count"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/distance_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_title" />

    <TextView
        android:id="@+id/distance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="177dp"
        android:text="@string/distance_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_count" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="198dp"
        android:layout_marginEnd="199dp"
        android:layout_marginBottom="16dp"
        android:text="@string/distance"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/stop_walking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance_title" />

    <Button
        android:id="@+id/stop_walking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="48dp"
        android:text="@string/stop_walking"
        android:textColor="@color/design_default_color_primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance" />
</androidx.constraintlayout.widget.ConstraintLayout>